[project]
name = "release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "google-genai==1.65.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
]
