[project]
name = "release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "google-genai==1.65.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock==3.15.1",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
pythonpath = ["."]

[tool.coverage.run]
source = ["main", "scrapers"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

